chore: add busted globals to config files

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,6 +1,13 @@
 {
   "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
-  "diagnostics.globals": ["vim"],
+  "diagnostics.globals": [
+    "after_each",
+    "describe",
+    "it",
+    "setup",
+    "teardown",
+    "vim"
+  ],
   "format.enable": false,
   "runtime.version": "LuaJIT"
 }
