--- a/.luarc.json
+++ b/.luarc.json
@@ -1,14 +1,6 @@
 {
   "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
-  "diagnostics.globals": [
-    "after_each",
-    "describe",
-    "it",
-    "setup",
-    "spy",
-    "teardown",
-    "vim"
-  ],
+  "diagnostics.globals": ["after_each", "before_each", "describe", "it", "vim"],
   "format.enable": false,
-  "runtime.version": "LuaJIT"
+  "runtime.version": "Lua 5.1"
 }
