--- a/stylua.toml
+++ b/stylua.toml
@@ -1,6 +1,10 @@
+syntax = "Lua51"
 column_width = 100
 indent_type = "Spaces"
 indent_width = 2
 line_endings = "Unix"
-call_parentheses = "None"
+call_parentheses = "Always"
 collapse_simple_statement = "Always"
+
+[sort_requires]
+enabled = true
