--- a/.luarc.json
+++ b/.luarc.json
@@ -1,6 +1,13 @@
 {
   "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
-  "diagnostics.globals": ["after_each", "before_each", "describe", "it", "vim"],
+  "diagnostics.globals": [
+    "after_each",
+    "before_each",
+    "describe",
+    "it",
+    "setup",
+    "vim"
+  ],
   "format.enable": false,
   "runtime.version": "Lua 5.1"
 }
